--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="cliente.html">Cadastro de cliente</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="produto.html">Cadastro de produtos</a>
+              <a class="nav-link" href="cliente.html">Cadastro de clientes</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="produto.html">Cadastro de produtos</a>
+              </li>
           </ul>
         </div>
       
