--- a/produto.html
+++ b/produto.html
@@ -12,6 +12,25 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-sm bg-light">
+
+        <div class="container-fluid">
+          <!-- Links -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cliente.html">Cadastro de clientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="produto.html">Cadastro de produtos</a>
+              </li>
+          </ul>
+        </div>
+      
+      </nav>
+
     <div class="container">
         <h2 class="text-center"> Cadastro de produtos</h2>
         <form action="">
